@@ -8,6 +8,7 @@ t/00-report-prereqs.t
 t/001_load.t
 t/002_icpp.t
 t/003_standard_flag.t
+t/004_env.t
 t/010_module_build.t
 t/011_makemaker.t
 t/lib/Guess.pm
